--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
   --x1: #ef8a8a;
   --y1: #78b1e5;
   --y1-hover: #1f6eb6;
+
+  font-size: 12px;
 }
 
 * {
@@ -70,15 +72,19 @@ body {
 }
 
 /* LOGIN */
+#login .main--container {
+  margin-top: 64px;
+}
+
 .main--container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .logo--container {
   position: relative;
-  top: -80px;
+  top: -40px;
 }
 
 .container--form {
@@ -86,7 +92,7 @@ body {
   border-radius: 6px 0 0 6px;
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 0 40px 20px 40px;
   box-sizing: border-box;
   align-items: center;
 }
@@ -217,6 +223,7 @@ textarea:focus {
 #pass-recover .main--container {
   display: flex;
   flex-direction: column;
+  margin-top: 80px;
 }
 
 #pass-recover .container--form {
